--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blue-chunk",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A fragment and assemble binary library",
   "license": "MIT",
   "repository": "",
@@ -16,7 +16,8 @@
   "scripts": {
     "clean": "rimraf lib",
     "build": "npm run clean && echo Using TypeScript && tsc --version && tsc --pretty",
-    "test": "npm run build && mocha --require ts-node/register --recursive \"test/**/*.test.ts\""
+    "test": "npm run build && mocha --require ts-node/register --recursive \"test/**/*.test.ts\"",
+    "prepublish": "npm run build"
   },
   "dependencies": {},
   "devDependencies": {
